[package]
name = "nym-proxies-standalone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy_server"
path = "src/proxy_server.rs"

[[bin]]
name = "proxy_client"
path = "src/proxy_client.rs"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", rev = "8800eccf5a17ad337729124d989467dd16a05800" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "8800eccf5a17ad337729124d989467dd16a05800", features = [
    "basic_tracing",
] }
nym-sphinx-addressing = { git = "https://github.com/nymtech/nym", rev = "8800eccf5a17ad337729124d989467dd16a05800" }
rand = "0.8.5"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dirs = "5.0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.90"
tokio = { version = "1.39", features = ["full"] }
